Wed Jun 10 11:34:07 1998  Jason Molenda  (crash@bugshack.cygnus.com)

	* gnu-regex.c, gnu-regex.h: Change LGPL license to GPL license
	to stay consistent with the rest of GDB.

Wed Jun 10 11:27:39 1998  Jason Molenda  (crash@bugshack.cygnus.com)

	* gnu-regex.c, gnu-regex.h: Update to current FSF (glibc) versions.

Wed Jun 10 10:58:18 1998  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* printcmd.c (disassemble_command): move overlay mapping code
	"up" into find_pc_partial_function.
	* blockframe.c (find_pc_partial_function): adjust start address
	and end address for overlays (mapped vs. unmapped addresses),
	so that all callers of this function may benefit.
	* m32r-tdep.c (m32r_skip_prologue): adjust indentation.

Mon Jun  8 16:08:10 1998  Ron Unrau  <runrau@cygnus.com>

	* objfiles.c (add_to_objfile_sections): All targets to define
	  TARGET_KEEP_SECTION to permit them to retain bfd sections that
	  GDB would otherwise have discarded.

Fri Jun  5 13:56:19 1998  Doug Evans  <devans@canuck.cygnus.com>

	* dbxread.c (read_dbx_symtab): Don't lower texthigh for last psymtab.

Thu Jun  4 18:35:04 1998  Stan Shebs  <shebs@andros.cygnus.com>

	* remote.c (init_extended_remote_ops): Make extended_remote_ops
	by copying from remote_ops, move it and init_remote_ops to
	usual place at end of file, remove "void" from arg lists.

Thu Jun  4 17:51:06 1998  Mark Alexander  <marka@cygnus.com>

	* sparc-tdep.c (sparc_fix_call_dummy): Byte-swap the call dummy
	on bi-endian machines.
	(sparc_extract_return_value): Handle values smaller than int on
	machines with little-endian data.
	(sparc_target_architecture_hook): Set bi_endian flag.

Thu Jun  4 12:14:48 1998  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* printcmd.c (disassemble_command): Fix off-by-one error for
	disassembling functions in unmapped overlay sections.

Thu Jun  4 10:15:03 1998  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* remote.c: merged.

        - Jim Blandy  <jimb@zwingli.cygnus.com>